project(GraphProcessing)

add_graphlab_library(simple_undirected_triangle_count simple_undirected_triangle_count)
add_graphlab_library(undirected_triangle_count undirected_triangle_count.cpp)
add_graphlab_library(directed_triangle_count directed_triangle_count.cpp)
add_graphlab_library(pagerank pagerank.cpp)
#add_library(pagerank SHARED pagerank.cpp)
add_graphlab_library(kcore kcore.cpp)
add_graphlab_library(format_convert format_convert.cpp)
#add_graphlab_library(sssp sssp.cpp)
add_graphlab_library(simple_coloring simple_coloring.cpp)
add_graphlab_library(connected_component connected_component.cpp)
add_graphlab_library(connected_component_stats connected_component_stats.cpp)
add_graphlab_library(approximate_diameter approximate_diameter.cpp)
add_graphlab_library(eigen_vector_normalization eigen_vector_normalization.cpp)
add_graphlab_library(graph_laplacian graph_laplacian.cpp)
add_graphlab_library(partitioning partitioning.cpp)

# add_graphlab_library(warp_pagerank warp_pagerank.cpp)
# add_graphlab_library(warp_pagerank2 warp_pagerank2.cpp)
# add_graphlab_library(warp_coloring warp_coloring.cpp)
# add_graphlab_library(warp_bond_percolation warp_bond_percolation.cpp)
# add_graphlab_library(warp_pagerank_sweeps warp_pagerank_sweeps.cpp)

add_graphlab_library(TSC TSC.cpp)
requires_eigen(TSC)
